1. Ignore some files from the git repository

We do not want to track files generated by Python. For example,
Python creates `*.pyc` file as a cache. This is automatically generated
by Python so we do not want to track its history. To find all cache files,
we can type

```
$ find . -name "*.pyc"
$ find . -name "__pycache__"
```

Then we can remove files from git repository by

```
$ git rm -r programs/minlp/model/__pycache__
```