@@ -15,3 +15,11 @@ Then we can remove files from git repository by
 ```
 $ git rm -r programs/minlp/model/__pycache__
 ```
+
+2. Create virtual environment
+
+Run the following script and setup a virtual environment
+
+```
+$ ./setup_python_env.sh
+```
